--- a/jm-react-site/src/components/About/About.css
+++ b/jm-react-site/src/components/About/About.css
@@ -54,126 +54,6 @@
   }
 }
 
-/* form labels */
-.form-name label,
-.form-email label,
-.form-message label {
-  display: none;
-}
-
-.form-name input,
-.form-email input,
-.form-message textarea,
-.form-button button {
-  grid-column: overlap/right-margin;
-  border: 0;
-  align-self: flex-start;
-  justify-self: flex-end;
-  font-size: var(--md);
-  padding: 1.25rem;
-  height: calc(100% - 1.125rem);
-  width: calc(100% - 2.5rem);
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box; /* Firefox, other Gecko */
-  box-sizing: border-box; /* Opera/IE 8+ */
-  color: var(--shade-1);
-  background-color: transparent;
-}
-
-.form-name input,
-.form-email input,
-.form-message textarea {
-  border-bottom: 0.25rem solid var(--shade-3);
-}
-
-@media screen and (max-width: 1154px) {
-  .form-name input,
-  .form-email input,
-  .form-message textarea,
-  .form-button button {
-    grid-column: logo/overlap;
-    justify-self: flex-start;
-  }
-}
-@media screen and (max-width: 768px) {
-  .form-name input,
-  .form-email input,
-  .form-message textarea,
-  .form-button button {
-    grid-column: content/right-margin;
-    font-size: 1rem;
-    width: 100%;
-  }
-}
-
-.form-name input:focus,
-.form-email input:focus,
-.form-message textarea:focus,
-.form-button button:focus {
-  border-bottom: 0.25rem solid var(--shade-1);
-  outline: none;
-}
-
-.form-name input::placeholder,
-.form-email input::placeholder,
-.form-message textarea::placeholder {
-  color: var(--shade-4);
-}
-
-@media screen and (max-width: 1154px) {
-  .form-name input,
-  .form-email input {
-    padding: 1rem;
-  }
-}
-
-/* TEXTAREA */
-.form-message textarea {
-  resize: none;
-}
-
-@media screen and (max-width: 1154px) {
-  .form-message textarea {
-    padding: 1.25rem;
-  }
-}
-
-/* BUTTON */
-.form-button button {
-  text-transform: uppercase;
-  background-color: var(--shade-1);
-  color: var(--shade-4);
-  font-weight: 700;
-  font-size: var(--ml);
-  letter-spacing: 0.2em;
-  cursor: pointer;
-}
-
-.form-button button:hover {
-  background-color: var(--shade-2);
-}
-
-.form-name input {
-  grid-row: row-name/row-email;
-}
-.form-email input {
-  grid-row: row-email/row-message;
-}
-.form-message textarea {
-  grid-row: row-message/row-submit;
-}
-
-.form-button button {
-  grid-row: row-submit/post-form;
-}
-
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-}
-
 .about-nav {
   grid-column: overlap/right-margin;
   grid-row: row-select/row-name;
@@ -245,7 +125,7 @@ textarea {
   .about-me h1,
   .about-me div {
     grid-column: logo/right-margin;
-    padding: 0.625rem 0 0.625rem 0;
+    padding: 0 0 0.625rem 0;
   }
   .about-me h1 {
     grid-row: row-content / row-select;
@@ -254,7 +134,7 @@ textarea {
 
   .about-me div {
     grid-row: row-name / row-submit;
-    margin: 1.125rem 0 0 0;
+    margin: 0.5rem 0 0 0;
   }
 }
 
