--- a/jm-react-site/src/components/ContactForm/ContactForm.css
+++ b/jm-react-site/src/components/ContactForm/ContactForm.css
@@ -1,3 +1,123 @@
+/* form labels */
+.form-name label,
+.form-email label,
+.form-message label {
+  display: none;
+}
+
+.form-name input,
+.form-email input,
+.form-message textarea,
+.form-button button {
+  grid-column: overlap/right-margin;
+  border: 0;
+  align-self: flex-start;
+  justify-self: flex-end;
+  font-size: var(--md);
+  padding: 1rem;
+  height: calc(100% - 1.125rem);
+  width: calc(100% - 2.5rem);
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box; /* Opera/IE 8+ */
+  color: var(--shade-1);
+  background-color: transparent;
+}
+
+.form-name input,
+.form-email input,
+.form-message textarea {
+  border-bottom: 0.25rem solid var(--shade-3);
+}
+
+@media screen and (max-width: 1154px) {
+  .form-name input,
+  .form-email input,
+  .form-message textarea,
+  .form-button button {
+    grid-column: logo/overlap;
+    justify-self: flex-start;
+  }
+}
+@media screen and (max-width: 768px) {
+  .form-name input,
+  .form-email input,
+  .form-message textarea,
+  .form-button button {
+    grid-column: content/right-margin;
+    font-size: 1rem;
+    width: 100%;
+  }
+}
+
+.form-name input:focus,
+.form-email input:focus,
+.form-message textarea:focus,
+.form-button button:focus {
+  border-bottom: 0.25rem solid var(--shade-1);
+  outline: none;
+}
+
+.form-name input::placeholder,
+.form-email input::placeholder,
+.form-message textarea::placeholder {
+  color: var(--shade-4);
+}
+
+@media screen and (max-width: 1154px) {
+  .form-name input,
+  .form-email input {
+    padding: 0.75rem;
+  }
+}
+
+/* TEXTAREA */
+.form-message textarea {
+  resize: none;
+}
+
+@media screen and (max-width: 1154px) {
+  .form-message textarea {
+    padding: 1.25rem;
+  }
+}
+
+/* BUTTON */
+.form-button button {
+  text-transform: uppercase;
+  background-color: var(--shade-1);
+  color: var(--shade-4);
+  font-weight: 700;
+  font-size: var(--ml);
+  letter-spacing: 0.2em;
+  cursor: pointer;
+}
+
+.form-button button:hover {
+  background-color: var(--shade-2);
+}
+
+.form-name input {
+  grid-row: row-name/row-email;
+}
+.form-email input {
+  grid-row: row-email/row-message;
+}
+.form-message textarea {
+  grid-row: row-message/row-submit;
+}
+
+.form-button button {
+  grid-row: row-submit/post-form;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+}
+
 .form-errors {
   grid-row: post-form/footer;
   grid-column: overlap/right-margin;
