--- a/jm-react-site/src/styles/ContentPosition.css
+++ b/jm-react-site/src/styles/ContentPosition.css
@@ -31,22 +31,22 @@
 @media screen and (max-width: 1154px) {
   .home-position main {
     grid-template-columns: [h-col-0 h-col-pad-l] 0.25fr [h-col-1 h-col-2 h-col-3] 0.5fr [h-text] 0.5fr [chev] 0.25fr [chev-end h-col-4] 0.25fr [h-col-5 h-col-6];
-    grid-row: row-content/post-form;
+    grid-row: row-content/footer;
   }
 }
 
 @media screen and (max-width: 900px) {
   .home-position main {
-    padding-bottom: 2.5rem;
+    /* padding-bottom: 2.5rem; */
     grid-template-columns: [h-col-0 h-col-pad-l] 0.25fr [h-col-1 h-col-2 h-col-3 h-text] 1fr [chev] 0.25fr [chev-end h-col-4] 0.25fr [h-col-5 h-col-6];
   }
 }
 
 @media screen and (max-width: 700px) {
   .home-position main {
-    margin-top: 0rem;
+    /* margin-top: 0rem; */
     grid-template-rows: [h-row-1] 0.5fr [h-row-2 ] 0.5fr [h-row-3 ] auto [h-row-4]auto[ h-row-5];
-    align-self: flex-start;
+    align-self: center;
   }
 }
 
