--- a/jm-react-site/src/styles/Showcase.css
+++ b/jm-react-site/src/styles/Showcase.css
@@ -85,7 +85,7 @@
     clip-path: none;
     height: 100%;
     min-width: 100%;
-    grid-template-rows: [one] minmax(23.5rem, 30vh) [two];
+    /* grid-template-rows: [one] minmax(23.5rem, 30vh) [two]; */
     padding: 0;
     margin: 0;
     align-self: flex-start;
@@ -159,9 +159,6 @@
   }
   .showcase-content section:first-of-type {
     margin: 0;
-  }
-  .showcase-content main article h2 {
-    padding: 0 0 2rem 0;
   }
   .preview-container {
     align-self: flex-end;
